--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ support in Gnuastro. The list is ordered alphabetically.
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Richard Stallman                     rms@gnu.org
     Ole Streicher                        olebole@debian.org
+    David Valls-Gabaud                   david.valls-gabaud@obspm.fr
 
 
 Institutions
