--- a/THANKS
+++ b/THANKS
@@ -21,6 +21,7 @@ support in Gnuastro. The list is ordered alphabetically.
     Antonio Diaz Diaz                    antonio@gnu.org
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
     Brandon Invergo                      brandon@gnu.org
+    Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
     Mohammad-Reza Khellat                moha.khe@gmail.com
     Alan Lefor                           alefor@astr.tohoku.ac.jp
     Francesco Montanari                  francesco.montanari@openmailbox.org
