Specific suffixes for one modular warping in ImageWarp
Until now, ImageWarp would use the `_warped.fits' suffix for automatic
output. But its some time that it also allows modular warpings (like
rotation, alignment, scaling and so on). Thus, when the user only wants one
of these operations, it is much more meaningful if the suffix also reflects
that particular warp.

A check is now added, so when there is only one element in the modular
warpings linked list, the suffix will be determined based on its
type. Otherwise, it will fall back to the generic `--warped.fits' suffix.

A short description of the `--output' option and Automatic output was also
added to the first paragraph after the examples in the "Invoking ImageWarp"
section of the book.

This task was suggested by Lee Kelvin.

This finishes task #14309.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -9206,9 +9206,9 @@ One line examples:
 
 @example
 $ astimgwarp matrix.txt image.fits
-$ astimgwarp --align rawimage.fits
-$ astimgwarp --scale 1.82 --translate 2.1 image.fits
 $ astimgwarp --rotate=37.92 --scale=0.8 image.fits
+$ astimgwarp --scale 1.82 --translate 2.1 image.fits
+$ astimgwarp --align rawimage.fits --output=aligned.fits
 $ astimgwarp --matrix=0.2,0,0.4,0,0.2,0.4,0,0,1 image.fits
 $ astimgwarp --matrix="0.7071,-0.7071  0.7071,0.7071" image.fits
 @end example
@@ -9217,8 +9217,11 @@ ImageWarp can accept two arguments, one (an image) is mandatory if any
 processing is to be done. An optional argument is a plain text file, which
 must contain the warp/transform matrix, see @ref{Warping basics}. When this
 text file is specified, then all options related to the matrix will be
-ignored (see below for the options). The general options to all Gnuastro
-programs (including ImageWarp) can be seen in @ref{Common options}.
+ignored (see below for the options). As in all Gnuastro programs, when an
+output is not explicitly set with the @option{--output} option, the output
+filename will be set automatically based on the operation, see
+@ref{Automatic output}. For the full list of general options to all
+Gnuastro programs (including ImageWarp), please see @ref{Common options}.
 
 To be the most accurate the input image will be converted to double
 precision floating points and all the processing will be done in this
